Add missing directory, pep8

--- a/.landscape.yml
+++ b/.landscape.yml
@@ -3,6 +3,8 @@ test-warnings: false
 strictness: medium
 max-line-length: 100
 autodetect: true
+pep8:
+  full: true
 requirements:
   - requirements.txt
   - test/requirements.txt
@@ -13,3 +15,4 @@ pyflakes:
     - F821
 ignore-paths:
   - docs
+  - test
