Change UT from nose to pytest, pep8 to pycodestyle
Ref #12

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,17 +11,16 @@ script:
   # so to help eventual debug: knowing what exact versions are in use can be rather useful.
   - pip freeze
   # Code static analysis
-  - pep8 --max-line-length=100 --exclude='*.pyc, *.cfg, *.log' --ignore='E402' cmake_converter/*
+  - pycodestyle --max-line-length=100 --exclude='*.pyc, *.cfg, *.log' --ignore='E402' cmake_converter/*
   - pylint --rcfile=.pylintrc cmake_converter/
   # No pep257 currently (Code doc compliance)
   # - pep257 --select=D300 alignak_app
   # Code dynamic analysis
+  - cd test/
   - coverage erase
-  # - cd test/
-  - nosetests -xv --nologcapture --with-coverage --cover-package=cmake_converter test/test_*.py
-  - coverage combine
-  # - cd ..
+  - pytest --cov=cmake_converter --cov-config=.coveragerc test_*.py
   - coverage report -m
+  - cd ..
 
 
 # specific call to launch coverage data into coveralls.io
@@ -29,6 +28,6 @@ after_success:
   # to get coverage data with relative paths and not absolute we have to
   # execute coveralls from the base directory of the project,
   # so we need to move the .coverage file here :
-  # mv test/.coverage . && coveralls --rcfile=test/.coveragerc -v
-  - coveralls -v
+  - mv test/.coverage . && coveralls --rcfile=test/.coveragerc -v
+  # - coveralls -v
   
