--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ script:
   # so to help eventual debug: knowing what exact versions are in use can be rather useful.
   - pip freeze
   # Code static analysis
-  - pycodestyle --max-line-length=100 --exclude='*.pyc, *.cfg, *.log, *.cmake' --ignore='E402' cmake_converter/*
+  - pycodestyle --max-line-length=100 --exclude='*.pyc, *.cfg, *.log, *.cmake' --ignore='E402,W503' cmake_converter/*
   - pylint --rcfile=.pylintrc cmake_converter/
   # No pep257 currently (Code doc compliance)
   - pep257 --select=D300 cmake_converter
