--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ script:
   - pip freeze
   # Code static analysis
   - pycodestyle --max-line-length=100 --exclude='*.pyc, *.cfg, *.log, *.cmake' --ignore='E402,W503' cmake_converter/*
-  - pylint --rcfile=.pylintrc cmake_converter/
+  - pylint --rcfile=.pylintrc cmake_converter/ cmake_converter/visual_studio
   # No pep257 currently (Code doc compliance)
   - pep257 --select=D300 cmake_converter
   # Code dynamic analysis
