--- a/.pylintrc
+++ b/.pylintrc
@@ -87,7 +87,7 @@ evaluation=10.0 - ((float(5 * error + warning + refactor + convention) / stateme
 
 # Template used to display messages. This is a python new-style format string
 # used to format the message information. See doc for all details
-#msg-template=
+msg-template='{abspath}:{line}:{column}: {msg_id} {msg}'
 
 
 [FORMAT]
