vcxproj: fixed crash with empty Build Step (fixes #52)

--- a/test/datatest/foo.vcxproj
+++ b/test/datatest/foo.vcxproj
@@ -136,6 +136,9 @@
       <Path>
       </Path>
     </BuildLog>
+    <PostBuildEvent>
+      <Command></Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
